# tgdb

./: .gitignore  README.md  a  pyproject.toml  start_tgdb.py
.github/: copilot-instructions.md
ci/: run_all.sh  run_ci.py  run_ci.sh
ci/breakpoint/: run.py  run.sh  test.t
doc/: tgdb.html
docs/: anonymous-namespace-varobj-handling.md  io-dispatch.md  known_gdb_bug.md  local-variable-pane-update-flow.md  nested-pane-algorithm.md  pipe-protocol.md  socket-protocol.md
known_gdb_bug_reproduce/: README.md  bug_1.py  bug_2.py  bug_3.py
test/: test_bad_mem.cpp  test_circular_reference.cpp  test_cpp26.cpp  test_dynamic_child.cpp  test_long_vector.cpp  test_map.cpp  test_mem_var_update.cpp  test_namespace.cpp  test_resursion.cpp  test_scope.cpp  test_shadow_update.cpp  test_variant.cpp  test_vec.cpp
tgdb/: __init__.py  __main__.py  app.py  app_callbacks.py  app_commands.py  app_core.py  app_keys.py  app_layout.py  app_workspace.py  async_util.py  callbacks.py  cmdline_history.py  cmdline_keys.py  cmdline_messages.py  cmdline_render.py  cmdline_state.py  cmdline_task.py  command_line_bar.py  commands.py  config.py  config_commands.py  config_execution.py  config_keys.py  config_options.py  config_python.py  config_shared.py  config_types.py  context_menu.py  context_menu_model.py  context_menu_panel.py  core.py  disasm_pane.py  evaluate_pane.py  file_browser_pane.py  file_dialog.py  file_dialog_keys.py  file_dialog_messages.py  file_dialog_view.py  gdb_controller.py  gdb_controller_requests.py  (+38 more)
tgdb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+115 files in other folders)
